# aws_prodbot

./: Dockerfile  README  README.md  app.py  aws.json  aws_extra.json  get.py  pyproject.toml
bots/aws_prodbot/: .env.example  Dockerfile  README.md  get.py
bots/aws_prodbot/_archive/: aws_202110.json  aws_original.json
bots/aws_prodbot/infra/: .terraform.lock.hcl  main.tf  variables.tf  versions.tf
bots/aws_prodbot/src/: app.py  pyproject.toml  tweet.py
infra/: .terraform.lock.hcl  main.tf  variables.tf  versions.tf
src/: app.py  aws.json  pyproject.toml  tweet.py
